--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,15 @@
 
     <ImageView
         android:id="@+id/imagelogin"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:src="@drawable/loginpage2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/loginpage"
+        android:src="@drawable/login1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ImageContrastCheck"
-        android:contentDescription="@string/loginpage"/>
+        tools:ignore="ImageContrastCheck" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textlayout"
@@ -138,14 +139,15 @@
         android:textSize="10sp" />
 
     <ProgressBar
+
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="345dp"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="173dp"
         android:foregroundGravity="center"
-
         android:visibility="gone"
         tools:visibility="visible" />
 
