--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -14,7 +14,7 @@
         android:background="#00000000"
         android:layout_marginRight="20sp"
         android:text="Skip"
-        android:textColor="@color/buttontext"
+        android:textColor="@color/Green"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
