--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#F0F4F3</color>
-    <color name="buttontext">#6067b3</color>
+    <color name="buttontext">#56983D</color>
     <color name="inactive">#C4C4C4</color>
-    <color name="active">#50C2C9</color>
+    <color name="active">#56983D</color>
     <color name="falses">#DC143C</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
