--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
-        android:hint="Username"
+        android:hint="Nomor Telepon"
         android:textColorHint="@color/Green"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
@@ -45,7 +45,7 @@
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:fontFamily="@font/poppins_light"
             android:textColor="@color/Green"
             tools:ignore="SpeakableTextPresentCheck">
@@ -139,7 +139,6 @@
         android:textSize="10sp" />
 
     <ProgressBar
-
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
@@ -150,6 +149,5 @@
         android:foregroundGravity="center"
         android:visibility="gone"
         tools:visibility="visible" />
-
 
 </RelativeLayout>
