--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
+
             <ImageView
                 android:id="@+id/imageregister"
                 android:layout_width="wrap_content"
@@ -36,7 +38,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="40dp"
-                android:hint="Full Name"
+                android:hint="Nama Lengkap"
                 android:textColorHint="@color/buttontext"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
@@ -72,7 +74,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
-                android:hint="Phone Number"
+                android:hint="Nomor Telepon"
                 android:textColorHint="@color/Green"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
@@ -100,11 +102,47 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/boxaddres"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_below="@+id/boxnumber"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="40dp"
+                android:hint="Alamat"
+                android:textColorHint="@color/Green"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp"
+                app:boxStrokeColor="@color/Green"
+                app:endIconDrawable="@drawable/outline_close_24"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/Green"
+                app:hintTextColor="@color/Green"
+                app:startIconDrawable="@drawable/round_local_phone_24"
+                app:startIconTint="@color/Green">
+
+                <EditText
+                    android:id="@+id/address"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_light"
+                    android:textColor="@color/buttontext"
+                    tools:ignore="SpeakableTextPresentCheck">
+
+                </EditText>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/boxpassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/boxnumber"
+                android:layout_below="@+id/boxaddres"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
@@ -133,54 +171,18 @@
                     tools:ignore="SpeakableTextPresentCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/boxpassword2"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/boxpassword"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="40dp"
-                android:hint="@string/confirm_password"
-                android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxStrokeColor="@color/buttontext"
-                app:helperText="Required"
-                app:helperTextTextColor="@color/buttontext"
-                app:hintTextColor="@color/buttontext"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/buttontext"
-                app:startIconDrawable="@drawable/outline_lock_24"
-                app:startIconTint="@color/buttontext">
-
-                <EditText
-                    android:id="@+id/password2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_light"
-                    android:inputType="textPassword"
-                    android:textColor="@color/buttontext"
-                    tools:ignore="SpeakableTextPresentCheck" />
-            </com.google.android.material.textfield.TextInputLayout>
-
             <Button
                 android:id="@+id/btnregist"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_below="@id/boxpassword2"
+                android:layout_below="@id/boxpassword"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Register"
                 android:textColor="@color/white">
-
             </Button>
         </RelativeLayout>
+
     </ScrollView>
-
-
 </RelativeLayout>
