featured update profile dan fix layout

--- a/app/src/main/res/layout/activity_mutasi_penarikan.xml
+++ b/app/src/main/res/layout/activity_mutasi_penarikan.xml
@@ -12,16 +12,18 @@
         android:layout_width="wrap_content"
         android:fontFamily="@font/poppins"
         android:layout_height="60dp"
-        android:text="@string/tanggal_awal"
+        android:text="30 - September - 2022"
         app:cornerRadius="10dp"
         android:background="@drawable/rectangle2"
         android:textColor="@color/Green"
         android:layout_marginTop="30dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:layout_marginStart="30dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/tanggalakhir"
@@ -29,11 +31,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppins"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:background="@drawable/rectangle2"
-        android:layout_marginEnd="30dp"
-        android:text="@string/tanggal_akhir"
+        android:layout_marginEnd="10dp"
+        android:text="30 - September - 2022"
         app:cornerRadius="10dp"
         android:textColor="@color/Green"
         app:layout_constraintEnd_toEndOf="parent"
